2239.	[func]		Ship a prebuilt bin/named/bind9.xsl.h. [RT #17114]

2238.	[bug]		It was possible to trigger a REQUIRE when a
			validation was cancelled. [RT #17106]

2237.	[bug]		libbind: res_init() was not thread aware. [RT #17123]

2236.	[bug]		dnssec-signzone failed to preserve the case of
			of wildcard owner names. [RT #17085]

2235.	[bug]		<isc/atomic.h> was not being installed. [RT #17135]

2234.   [port]          Correct some compiler warnings on SCO OSr5 [RT #17134]
  
2233.   [func]          Add support for O(1) ACL processing, based on
                        radix tree code originally written by kevin
                        brintnall. [RT #16288]

2232.	[bug]		dns_adb_findaddrinfo() could fail and return
			ISC_R_SUCCESS. [RT #17137]

2231.	[bug]		Building dlzbdb (contrib/dlz/bin/dlzbdb) was broken.
			[RT #17088]

2230.	[bug]		We could INSIST reading a corrupted journal.
			[RT #17132]

2229.	[bug]		Null pointer dereference on query pool creation
			failure. [RT #17133]

2228.	[contrib]	contrib: Change 2188 was incomplete.

2227.	[cleanup]	Tidied up the FAQ. [RT #17121]

2226.	[placeholder]

2225.	[bug]		More support for systems with no IPv4 addresses.
		        [RT #17111]

2224.	[bug]		Defer journal compaction if a xfrin is in progress.
			[RT #17119]

2223.	[bug]		Make a new journal when compacting. [RT #17119]

2222.	[func]		named-checkconf now checks server key references.
		        [RT #17097]

2221.	[bug]		Set the event result code to reflect the actual
			record turned to caller when a cache update is
			rejected due to a more credible answer existing.
			[RT #17017]

2220.	[bug]		win32: Address a race condition in final shutdown of
			the Windows socket code. [RT #17028]
			
2219.	[bug]		Apply zone consistancy checks to additions, not
			removals, when updating. [RT #17049]

2218.	[bug]		Remove unnecessary REQUIRE from dns_validator_create().
			[RT #16976]

2217.	[func]		Adjust update log levels. [RT #17092]
